mattermost/privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: permission-fixer
  namespace: mattermost
spec:
  containers:
  - name: permission-fixer
    image: busybox
    command: ["sh", "-c", "chmod -R 777 /mnt/data/mattermost && chown -R 1000700000:1000700000 /mnt/data/mattermost && ls -l /mnt/data/mattermost && sleep 3600"]
    securityContext:
      privileged: true
    volumeMounts:
    - name: config-volume
      mountPath: /mnt/data/mattermost/config
    - name: data-volume
      mountPath: /mnt/data/mattermost/data
    - name: logs-volume
      mountPath: /mnt/data/mattermost/logs
    - name: plugins-volume
      mountPath: /mnt/data/mattermost/plugins
    - name: client-plugins-volume
      mountPath: /mnt/data/mattermost/client-plugins
    - name: bleve-indexes-volume
      mountPath: /mnt/data/mattermost/bleve-indexes
  volumes:
  - name: config-volume
    hostPath:
      path: /mnt/data/mattermost/config
      type: Directory
  - name: data-volume
    hostPath:
      path: /mnt/data/mattermost/data
      type: Directory
  - name: logs-volume
    hostPath:
      path: /mnt/data/mattermost/logs
      type: Directory
  - name: plugins-volume
    hostPath:
      path: /mnt/data/mattermost/plugins
      type: Directory
  - name: client-plugins-volume
    hostPath:
      path: /mnt/data/mattermost/client-plugins
      type: Directory
  - name: bleve-indexes-volume
    hostPath:
      path: /mnt/data/mattermost/bleve-indexes
  restartPolicy: Never
