mattermost/mattermost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
spec:
  selector:
    app: mattermost
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8065
